# cmake_one

./: .gitignore  README.md  cmake_one.py  run_in_docker.py
docker/ubuntu_env/: Dockerfile
test_repo/: CMakeLists.txt  main.cpp
test_repo/api_module/: CMakeLists.txt
test_repo/api_module/include/: api.h
test_repo/api_module/src/: api.cpp
toolchains/: aarch64-linux-gcc-cuda.toolchain.cmake  aarch64-linux-gnu.toolchain.cmake  aarch64_qnx.toolchain.cmake  aarch64_windows.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake  arm_qnx.toolchain.cmake  arm_windows.toolchain.cmake  i386_qnx.toolchain.cmake  i386_windows.toolchain.cmake  ios.toolchain.cmake  riscv64-linux-gnu.toolchain.cmake  riscv64-rvv-linux-gnu.toolchain.cmake  x86_64_qnx.toolchain.cmake  x86_64_windows.toolchain.cmake
